[package]
name = "error_holmes"          
version = "0.1.0"              
edition = "2021"                
authors = ["iamjuaness <iamjcv65@gmail.com>"]
description = "Displays errors and warnings directly in the code editor."
license = "MIT"              
readme = "README.md"          
repository = "https://github.com/iamjuaness/Error_Holmes_For_Zed"

[dependencies]
zed_extension_api = { git = "https://github.com/zed-industries/zed.git" }
anyhow = "1.0"
log = "0.4"

[lib]
crate-type = ["cdylib"]
